--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Dan Wellings"
-baseURL = "https://gohugo-theme-ananke.pages.dev"
+baseURL = ""
 languageCode = "en-us"
 theme = "ananke"
 resourceDir = "../resources"
@@ -26,7 +26,7 @@ enableRobotsTXT = true
   author = ""
   favicon = ""
   site_logo = ""
-  description = "The last theme you'll ever need. Maybe."
+  description = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
   recent_posts_number = 3
